--- a/index.html
+++ b/index.html
@@ -1629,7 +1629,7 @@ border-radius: 0px;
 <h1 class="title toc-ignore"><strong>Análisis y Explotación de la
 Información</strong></h1>
 <h3 class="subtitle">CUNEF Universidad</h3>
-<h4 class="date">Página actualizada: 2023-11-23</h4>
+<h4 class="date">Página actualizada: 2024-01-19</h4>
 
 </div>
 
@@ -1639,7 +1639,7 @@ Información</strong></h1>
 </div>
 <p><br /></p>
 <p>Bienvenido al sitio web de la asignatura de <strong>Análisis y
-Explotación de la Información</strong> del primer cuatrimestre de 2023
+Explotación de la Información</strong> del segundo cuatrimestre de 2024
 en CUNEF Universidad. En este sitio web encontrarás el material y los
 laboratorios que usaremos durante el curso. La página se actualizará con
 frecuencia durante el cuatrimestre, así que acostúmbrate a actualizar la
@@ -1651,103 +1651,72 @@ página.</p>
 <ul>
 <li><a href="./tema0/tema0.html">Diapositivas</a></li>
 </ul>
-</div>
-<div id="tema-1-programación-en-r" class="section level3">
-<h3>Tema 1 : Programación en R</h3>
-<ul>
-<li><a href="./tema1/tema1.html">Diapositivas</a></li>
-</ul>
-</div>
-<div id="tema-2-análisis-exploratorio-de-los-datos" class="section level3">
-<h3>Tema 2 : Análisis Exploratorio de los Datos</h3>
-<ul>
-<li>2.1: Visualización de datos
-<ul>
-<li><a href="./tema2/tema2-1.html">Diapositivas</a></li>
-</ul></li>
-<li>2.2: Transformación de datos
-<ul>
-<li><a href="./tema2/tema2-2.html">Diapositivas</a></li>
-</ul></li>
-<li>2.3: Análisis Exploratorio de datos
-<ul>
-<li><a href="./tema2/tema2-3.html">Diapositivas</a></li>
-</ul></li>
-</ul>
-</div>
-<div id="tema-3-data-wrangling" class="section level3">
-<h3>Tema 3 : Data Wrangling</h3>
-<ul>
-<li>3.1: Importación de datos
-<ul>
-<li><a href="./tema3/tema3-1.html">Diapositivas</a></li>
-</ul></li>
-<li>3.2: Organización de datos
-<ul>
-<li><a href="./tema3/tema3-2.html">Diapositivas</a></li>
-</ul></li>
-<li>3.3: Transformación de datos
-<ul>
-<li><a href="./tema3/tema3-3.html">Diapositivas</a></li>
-</ul></li>
-</ul>
-</div>
-<div id="tema-4-modelización" class="section level3">
-<h3>Tema 4 : Modelización</h3>
-<ul>
-<li><a href="./tema4/tema4.html">Diapositivas</a></li>
-</ul>
-</div>
-<div id="tema-5-comunicación-de-resultados" class="section level3">
-<h3>Tema 5 : Comunicación de Resultados</h3>
-<ul>
-<li><a href="./tema5/tema5.html">Diapositivas</a></li>
-</ul>
-</div>
-</div>
-<div id="laboratorios" class="section level2">
-<h2><strong>Laboratorios</strong></h2>
-<div id="lab-01---programación-en-r" class="section level3">
-<h3>Lab 01 - Programación en R</h3>
-<ul>
-<li><a href="./labs/lab1.html">Ejercicios</a></li>
-</ul>
-</div>
-<div id="lab-02---visualización" class="section level3">
-<h3>Lab 02 - Visualización</h3>
-<ul>
-<li><a href="./labs/lab2.html">Ejercicios</a></li>
-</ul>
-</div>
-<div id="lab-03---transformación" class="section level3">
-<h3>Lab 03 - Transformación</h3>
-<ul>
-<li><a href="./labs/lab3.html">Ejercicios</a></li>
-</ul>
-</div>
-<div id="lab-04---importación" class="section level3">
-<h3>Lab 04 - Importación</h3>
-<ul>
-<li><a href="./labs/lab4.html">Ejercicios</a></li>
-</ul>
-</div>
-<div id="lab-05---data-wrangling" class="section level3">
-<h3>Lab 05 - Data Wrangling</h3>
-<ul>
-<li><a href="./labs/lab5.html">Ejercicios</a></li>
-</ul>
-</div>
-<div id="lab-06---strings-factores-y-fechas" class="section level3">
-<h3>Lab 06 - Strings, Factores y Fechas</h3>
-<ul>
-<li><a href="./labs/lab6.html">Ejercicios</a></li>
-</ul>
-</div>
-<div id="lab-07---modelos" class="section level3">
-<h3>Lab 07 - Modelos</h3>
-<ul>
-<li><a href="./labs/lab7.html">Ejercicios</a></li>
-</ul>
+<!--
+
+### Tema 1 : Programación en R
+  - [Diapositivas](./tema1/tema1.html)
+  
+
+  
+### Tema 2 : Análisis Exploratorio de los Datos
+- 2.1: Visualización de datos
+  - [Diapositivas](./tema2/tema2-1.html)
+ 
+
+- 2.2: Transformación de datos
+  - [Diapositivas](./tema2/tema2-2.html)
+
+ 
+- 2.3: Análisis Exploratorio de datos
+  - [Diapositivas](./tema2/tema2-3.html)
+ 
+
+### Tema 3 : Data Wrangling
+  - 3.1: Importación de datos
+    - [Diapositivas](./tema3/tema3-1.html)
+
+  - 3.2: Organización de datos
+    - [Diapositivas](./tema3/tema3-2.html)
+    
+  
+  - 3.3: Transformación de datos
+    - [Diapositivas](./tema3/tema3-3.html)
+
+
+
+### Tema 4 : Modelización
+  - [Diapositivas](./tema4/tema4.html)
+
+  
+### Tema 5 : Comunicación de Resultados
+  - [Diapositivas](./tema5/tema5.html)
+
+
+## **Laboratorios**
+
+
+### Lab 01 - Programación en R 
+  - [Ejercicios](./labs/lab1.html)
+
+### Lab 02 - Visualización 
+  - [Ejercicios](./labs/lab2.html)
+  
+### Lab 03 - Transformación
+  - [Ejercicios](./labs/lab3.html)
+
+### Lab 04 - Importación
+  - [Ejercicios](./labs/lab4.html)
+
+### Lab 05 - Data Wrangling
+  - [Ejercicios](./labs/lab5.html)
+  
+### Lab 06 - Strings, Factores y Fechas
+  - [Ejercicios](./labs/lab6.html)
+
+### Lab 07 - Modelos
+  - [Ejercicios](./labs/lab7.html)
+  
+-->
 </div>
 </div>
 
