--- a/index.html
+++ b/index.html
@@ -1651,12 +1651,13 @@ página.</p>
 <ul>
 <li><a href="./tema0/tema0.html">Diapositivas</a></li>
 </ul>
+</div>
+<div id="tema-1-programación-en-r" class="section level3">
+<h3>Tema 1 : Programación en R</h3>
+<ul>
+<li><a href="./tema1/tema1.html">Diapositivas</a></li>
+</ul>
 <!--
-
-### Tema 1 : Programación en R
-  - [Diapositivas](./tema1/tema1.html)
-  
-
   
 ### Tema 2 : Análisis Exploratorio de los Datos
 - 2.1: Visualización de datos
