--- a/tema0/tema0.html
+++ b/tema0/tema0.html
@@ -229,9 +229,9 @@ Aprenderemos las herramientas fundamentales de R para las distintas fases de est
 
 
 - 1,2,3 `\(\rightarrow\)` Data Wrangling
-- 4,5 `\(\rightarrow\)` Data exploration
-- 5 `\(\rightarrow\)` Modelización
-- 6 `\(\rightarrow\)` Comunicación
+- 2,3 `\(\rightarrow\)` Data exploration
+- 4 `\(\rightarrow\)` Modelización
+- 5 `\(\rightarrow\)` Comunicación
 
 
 Todo esto usando el **lenguaje de programación R**.
@@ -285,9 +285,9 @@ Todo esto usando el **lenguaje de programación R**.
 
 * *Horario clases*: 
 
-  - Lunes 17.00 - 18.00
-  - Martes 18.00 - 19.00
-  - Jueves 17.00 - 19.00
+  - Jueves 8.30 - 9.30
+  - Jueves 10.30 - 11.30
+  - Viernes 11.00 - 12.00
 
 * *Asistencia:* Obligatoria, al menos 80%
 ---
