--- a/tema0/tema0.html
+++ b/tema0/tema0.html
@@ -271,13 +271,13 @@ Todo esto usando el **lenguaje de programación R**.
 
 ## Presentación
 
-* Análisis y Explotación de la Información. Grado en Ingeniería Informática
+* Análisis y Explotación de la Información. 
 
 * Profesor: Roi Naveiro
 
 * Email: roi.naveiro@cunef.edu
 
-* Web del curso: [https://cunef-aeinf-fall2023.github.io/](https://cunef-aeinf-fall2023.github.io/)
+* Web del curso: [https://cunef-aeinf-spring2024.github.io/](https://cunef-aeinf-spring2024.github.io/)
 
 ---
 
