--- a/index.html
+++ b/index.html
@@ -1629,7 +1629,7 @@ border-radius: 0px;
 <h1 class="title toc-ignore"><strong>Análisis y Explotación de la
 Información</strong></h1>
 <h3 class="subtitle">CUNEF Universidad</h3>
-<h4 class="date">Página actualizada: 2024-02-20</h4>
+<h4 class="date">Página actualizada: 2024-02-23</h4>
 
 </div>
 
@@ -1669,12 +1669,12 @@ página.</p>
 <ul>
 <li><a href="./tema2/tema2-2.html">Diapositivas</a></li>
 </ul></li>
+<li>2.3: Análisis Exploratorio de datos
+<ul>
+<li><a href="./tema2/tema2-3.html">Diapositivas</a></li>
+</ul></li>
 </ul>
 <!--
-
-- 2.3: Análisis Exploratorio de datos
-  - [Diapositivas](./tema2/tema2-3.html)
- 
 
 ### Tema 3 : Data Wrangling
   - 3.1: Importación de datos
