--- a/tema2/tema2-3.html
+++ b/tema2/tema2-3.html
@@ -4,7 +4,7 @@
     <title>Tema 2.3</title>
     <meta charset="utf-8" />
     <meta name="author" content="Roi Naveiro" />
-    <script src="libs/header-attrs-2.17/header-attrs.js"></script>
+    <script src="libs/header-attrs-2.25/header-attrs.js"></script>
     <link rel="stylesheet" href="ds_slides.css" type="text/css" />
   </head>
   <body>
@@ -33,13 +33,13 @@ class: center, middle, inverse, title-slide
 ]
 ---
 
-## Análisis Exploratioro de los Datos
+## Análisis Exploratorio de los Datos
 
 * Aprenderemos cómo explorar los datos de forma sistemática...
 
 * ...usando las herramientas aprendidas (visualización y transformación)
 
-* El Análisis Exploratior de los datos es un ciclo que consiste en
+* El Análisis Exploratorio de los datos es un ciclo que consiste en
 
   1. Generar preguntas sobre los datos
   2. Responderlas visualizanddo, transformando y modelizando
@@ -47,7 +47,7 @@ class: center, middle, inverse, title-slide
 
 ---
 
-## Análisis Exploratioro de los Datos
+## Análisis Exploratorio de los Datos
 
 * **Objetivo**: desarrollar entendimiento acerca de los datos
 
@@ -60,7 +60,7 @@ class: center, middle, inverse, title-slide
 
 ---
 
-## Análisis Exploratioro de los Datos
+## Análisis Exploratorio de los Datos
 
 * Proceso **creativo**: no hay reglas para determinar qué preguntas son las más útiles.
 
@@ -488,7 +488,7 @@ diamonds %&gt;%
 ##  8 E     Very Good  2400
 ##  9 E     Premium    2337
 ## 10 E     Ideal      3903
-## # … with 25 more rows
+## # ℹ 25 more rows
 ```
 ---
 
@@ -516,7 +516,7 @@ diamonds %&gt;%
 ##  8 E     Very Good  2400
 ##  9 E     Premium    2337
 ## 10 E     Ideal      3903
-## # … with 25 more rows
+## # ℹ 25 more rows
 ```
 
 ---
