--- a/tema2/tema2-3.html
+++ b/tema2/tema2-3.html
@@ -238,7 +238,7 @@ ggplot(data=iris, aes(x=Petal.Length, color=Species)) +
 ---
 ## Variación: valores atípicos
 
-* Encontrar **valores atípicos** (outliers) Tan importante como estudiar los valores típicos
+* Encontrar **valores atípicos** (outliers) es tan importante como estudiar los valores típicos
 
 * Valores atípicos:
 
