--- a/index.html
+++ b/index.html
@@ -1629,7 +1629,7 @@ border-radius: 0px;
 <h1 class="title toc-ignore"><strong>Análisis y Explotación de la
 Información</strong></h1>
 <h3 class="subtitle">CUNEF Universidad</h3>
-<h4 class="date">Página actualizada: 2024-03-20</h4>
+<h4 class="date">Página actualizada: 2024-04-01</h4>
 
 </div>
 
@@ -1730,11 +1730,14 @@ página.</p>
 <ul>
 <li><a href="./labs/lab4.html">Ejercicios</a></li>
 </ul>
+</div>
+<div id="lab-05---data-wrangling" class="section level3">
+<h3>Lab 05 - Data Wrangling</h3>
+<ul>
+<li><a href="./labs/lab5.html">Ejercicios</a></li>
+</ul>
 <!--
 
-### Lab 05 - Data Wrangling
-  - [Ejercicios](./labs/lab5.html)
-  
 ### Lab 06 - Strings, Factores y Fechas
   - [Ejercicios](./labs/lab6.html)
 
