--- a/labs/lab5.html
+++ b/labs/lab5.html
@@ -1849,12 +1849,11 @@ la base de datos <code>flights</code>.</p>
 </div>
 <div id="ejercicio-8" class="section level2">
 <h2>Ejercicio 8</h2>
-<p>(Difícil) Representa un mapa de los Estados Unidos donde cada
-aeropuerto de destino aparezca como un punto. El tamaño del punto ha de
-ser proporcional al valor medio del tiempo de vuelo
-(<code>air_time</code>) a ese aeropuerto (desde cualquier aeropuerto de
-NYC). Repite el ejercicio excluyendo el aeropuerto de Alaska y el de
-Hawaii.</p>
+<p>Representa un mapa de los Estados Unidos donde cada aeropuerto de
+destino aparezca como un punto. El tamaño del punto ha de ser
+proporcional al valor medio del tiempo de vuelo (<code>air_time</code>)
+a ese aeropuerto (desde cualquier aeropuerto de NYC). Repite el
+ejercicio excluyendo el aeropuerto de Alaska y el de Hawaii.</p>
 <p>¿Qué observas?</p>
 <p><strong>Pista:</strong> Para representar el mapa de EEUU puedes usar
 la siguiente función, donde <code>data</code> contiene al menos dos
@@ -1867,6 +1866,42 @@ longitud).</p>
 <p><strong>Pista:</strong> Las coordenadas de cada aeropuerto de destino
 están en la base de datos <code>airports</code>.</p>
 <div id="solución-7" class="section level3">
+<h3>Solución</h3>
+</div>
+</div>
+<div id="ejercicio-9" class="section level2">
+<h2>Ejercicio 9</h2>
+<p>Elabora una visualización similar a la anterior donde muestres la
+distribución espacial del retraso medio de los vuelos del día 13 de
+Junio. Compara esta distribución la de otro día, por ejemplo el 13 de
+Mayo. ¿Qué observas? Intenta determinar el origen del patrón (buscando
+en Google).</p>
+<div id="solución-8" class="section level3">
+<h3>Solución</h3>
+</div>
+</div>
+<div id="ejercicio-10" class="section level2">
+<h2>Ejercicio 10</h2>
+<p>Estudia la relación entre las condiciones climáticas en el origen y
+el retraso medio de los vuelos. ¿Qué condiciones climáticas parecen
+afectar más a los retrasos? Justifica tu respuesta con una tabla o una
+visualización.</p>
+<div id="solución-9" class="section level3">
+<h3>Solución</h3>
+</div>
+</div>
+<div id="ejercicio-11" class="section level2">
+<h2>Ejercicio 11</h2>
+<p>Estudia la relación entre la edad de los aviones y el retraso medio
+de los vuelos. Para ello, tendrás que juntar la base de datos
+<code>planes</code> con <code>flights</code>, y crear una nueva variable
+llamada <code>age</code>, que corresponda a la edad del avión que
+realizó el vuelo, en años. Asigna edad 25 a los aviones con más de 25
+años antes de estudiar la relación entre el retraso medio y la variable
+<code>age</code>. ¿Qué observas? Justifica tu respuesta con una
+visualización y tratar de dar una posible explicación al fenómeno
+observado.</p>
+<div id="solución-10" class="section level3">
 <h3>Solución</h3>
 </div>
 </div>
