--- a/tema3/tema3-3.html
+++ b/tema3/tema3-3.html
@@ -4,10 +4,7 @@
     <title>Tema 3.3</title>
     <meta charset="utf-8" />
     <meta name="author" content="Roi Naveiro" />
-    <script src="libs/header-attrs-2.17/header-attrs.js"></script>
-    <script src="libs/htmlwidgets-1.5.4/htmlwidgets.js"></script>
-    <link href="libs/str_view-0.1.0/str_view.css" rel="stylesheet" />
-    <script src="libs/str_view-binding-1.4.1/str_view.js"></script>
+    <script src="libs/header-attrs-2.25/header-attrs.js"></script>
     <link rel="stylesheet" href="ds_slides.css" type="text/css" />
   </head>
   <body>
@@ -282,8 +279,9 @@ x &lt;- c("Cats", "Uñas Chung Lee", "Capital")
 str_view(x, "Le")
 ```
 
-<div id="htmlwidget-4579cab7d818218ed460" style="width:960px;height:100%;" class="str_view html-widget"></div>
-<script type="application/json" data-for="htmlwidget-4579cab7d818218ed460">{"x":{"html":"<ul>\n  <li>Cats<\/li>\n  <li>Uñas Chung <span class='match'>Le<\/span>e<\/li>\n  <li>Capital<\/li>\n<\/ul>"},"evals":[],"jsHooks":[]}</script>
+```
+## [2] │ Uñas Chung &lt;Le&gt;e
+```
 
 **Pregunta**: diferencia entre `str_view` y `str_view_all`
 
@@ -298,8 +296,11 @@ x &lt;- c("Cats", "Uñas Chung Lee", "Capital")
 str_view(x, ".a.")
 ```
 
-<div id="htmlwidget-2ccfe57b253377ceb68f" style="width:960px;height:100%;" class="str_view html-widget"></div>
-<script type="application/json" data-for="htmlwidget-2ccfe57b253377ceb68f">{"x":{"html":"<ul>\n  <li><span class='match'>Cat<\/span>s<\/li>\n  <li>U<span class='match'>ñas<\/span> Chung Lee<\/li>\n  <li><span class='match'>Cap<\/span>ital<\/li>\n<\/ul>"},"evals":[],"jsHooks":[]}</script>
+```
+## [1] │ &lt;Cat&gt;s
+## [2] │ U&lt;ñas&gt; Chung Lee
+## [3] │ &lt;Cap&gt;i&lt;tal&gt;
+```
 ---
 ## Strings: expresiones regulares
 
@@ -311,8 +312,10 @@ x &lt;- c("Cats", "Uñas Chung Lee", "Capital")
 str_view(x, "^C")
 ```
 
-<div id="htmlwidget-289626fe2ec127d4dfd6" style="width:960px;height:100%;" class="str_view html-widget"></div>
-<script type="application/json" data-for="htmlwidget-289626fe2ec127d4dfd6">{"x":{"html":"<ul>\n  <li><span class='match'>C<\/span>ats<\/li>\n  <li>Uñas Chung Lee<\/li>\n  <li><span class='match'>C<\/span>apital<\/li>\n<\/ul>"},"evals":[],"jsHooks":[]}</script>
+```
+## [1] │ &lt;C&gt;ats
+## [3] │ &lt;C&gt;apital
+```
 
 ---
 ## Strings: expresiones regulares
@@ -324,8 +327,25 @@ Termina por `$`
 str_view(x, "l$")
 ```
 
-<div id="htmlwidget-560fe1fa4224281e1ed8" style="width:960px;height:100%;" class="str_view html-widget"></div>
-<script type="application/json" data-for="htmlwidget-560fe1fa4224281e1ed8">{"x":{"html":"<ul>\n  <li>Cats<\/li>\n  <li>Uñas Chung Lee<\/li>\n  <li>Capita<span class='match'>l<\/span><\/li>\n<\/ul>"},"evals":[],"jsHooks":[]}</script>
+```
+## [3] │ Capita&lt;l&gt;
+```
+
+---
+## Strings: expresiones regulares
+
+`\b` delimita una palabra 
+
+
+```r
+x &lt;- c("My favourite animal is the cat", "Here you can see our catalog")
+
+str_view(x, "\\bcat\\b")
+```
+
+```
+## [1] │ My favourite animal is the &lt;cat&gt;
+```
 
 
 ---
@@ -341,8 +361,9 @@ x = c("B12", "Eslava", "Ocho y Medio")
 str_view(x, "\\d")
 ```
 
-<div id="htmlwidget-6072ef9cb665d16d2e5d" style="width:960px;height:100%;" class="str_view html-widget"></div>
-<script type="application/json" data-for="htmlwidget-6072ef9cb665d16d2e5d">{"x":{"html":"<ul>\n  <li>B<span class='match'>1<\/span>2<\/li>\n  <li>Eslava<\/li>\n  <li>Ocho y Medio<\/li>\n<\/ul>"},"evals":[],"jsHooks":[]}</script>
+```
+## [1] │ B&lt;1&gt;&lt;2&gt;
+```
 ---
 ## Strings: expresiones regulares
 
@@ -357,6 +378,8 @@ writeLines("\\d")
 ## \d
 ```
 
+Cuando queremso escribir explícitamente el símbolo \ en una string, necesitamos escribir \\, pues \ es un caracter reservado.
+
 ---
 ## Strings: expresiones regulares
 
@@ -366,8 +389,10 @@ x = c("ES12", "Mi cuenta es ES46", "Resido en España (ES)")
 str_view(x, "ES\\d\\d")
 ```
 
-<div id="htmlwidget-84d3ff39f993edad4376" style="width:960px;height:100%;" class="str_view html-widget"></div>
-<script type="application/json" data-for="htmlwidget-84d3ff39f993edad4376">{"x":{"html":"<ul>\n  <li><span class='match'>ES12<\/span><\/li>\n  <li>Mi cuenta es <span class='match'>ES46<\/span><\/li>\n  <li>Resido en España (ES)<\/li>\n<\/ul>"},"evals":[],"jsHooks":[]}</script>
+```
+## [1] │ &lt;ES12&gt;
+## [2] │ Mi cuenta es &lt;ES46&gt;
+```
 
 ---
 ## Strings: expresiones regulares
@@ -376,8 +401,10 @@ str_view(x, "ES\\d\\d")
 
 
 ```r
-x &lt;- c("A1", "A12", "A14", "A6", "EA5", "A3", "F2")
+x &lt;- c("Siempre paso por la A1", "A12", "A14", "La A6 va a Galicia", "EA5", "A3", "F2")
 ```
+
+
 
 ---
 ## Strings: detectar patrones
@@ -473,7 +500,7 @@ df %&gt;%
 ##  8 across       8       2
 ##  9 act          9       1
 ## 10 active      10       3
-## # … with 970 more rows
+## # ℹ 970 more rows
 ```
 
 
@@ -629,7 +656,7 @@ gss_cat %&gt;%
     geom_point() + theme_bw()
 ```
 
-![](tema3-3_files/figure-html/unnamed-chunk-31-1.png)&lt;!-- --&gt;
+![](tema3-3_files/figure-html/unnamed-chunk-32-1.png)&lt;!-- --&gt;
 
 ---
 ## Factores - Reordenar niveles
@@ -645,7 +672,7 @@ gss_cat %&gt;%
     geom_point() + theme_bw()
 ```
 
-![](tema3-3_files/figure-html/unnamed-chunk-32-1.png)&lt;!-- --&gt;
+![](tema3-3_files/figure-html/unnamed-chunk-33-1.png)&lt;!-- --&gt;
 
 
 
@@ -757,11 +784,11 @@ library(lubridate)
 
 Tres tipos
 
-* Fechas, referidas como &lt;date&gt; en los tibble
+* Fechas: `&lt;date&gt;` 
 
-* Hora, referida como &lt;time&gt; en los tibble
+* Hora: `&lt;time&gt;` 
 
-* Fecha y hora, identifica unívocamente un tiempo. Referidas como &lt;dttm&gt; en los tibble
+* Fecha y hora: identifica unívocamente un tiempo. Referidas como `&lt;dttm&gt;` en los tibble
 (en R, POSIXct)
 
 ---
@@ -773,7 +800,7 @@ today()
 ```
 
 ```
-## [1] "2023-11-02"
+## [1] "2024-04-10"
 ```
 
 ```r
@@ -781,7 +808,7 @@ str(today())
 ```
 
 ```
-##  Date[1:1], format: "2023-11-02"
+##  Date[1:1], format: "2024-04-10"
 ```
 
 ```r
@@ -789,7 +816,7 @@ now()
 ```
 
 ```
-## [1] "2023-11-02 12:18:43 CET"
+## [1] "2024-04-10 16:52:11 CEST"
 ```
 
 ```r
@@ -797,7 +824,7 @@ str(now())
 ```
 
 ```
-##  POSIXct[1:1], format: "2023-11-02 12:18:43"
+##  POSIXct[1:1], format: "2024-04-10 16:52:11"
 ```
 
 ---
@@ -893,7 +920,7 @@ flights %&gt;%
 ##  8  2013     1     1     6      0
 ##  9  2013     1     1     6      0
 ## 10  2013     1     1     6      0
-## # … with 336,766 more rows
+## # ℹ 336,766 more rows
 ```
 
 ---
@@ -921,7 +948,7 @@ flights %&gt;%
 ##  8  2013     1     1     6      0 2013-01-01 06:00:00
 ##  9  2013     1     1     6      0 2013-01-01 06:00:00
 ## 10  2013     1     1     6      0 2013-01-01 06:00:00
-## # … with 336,766 more rows
+## # ℹ 336,766 more rows
 ```
 
 ---
@@ -934,7 +961,7 @@ as_datetime(today())
 ```
 
 ```
-## [1] "2023-11-02 UTC"
+## [1] "2024-04-10 UTC"
 ```
 
 ```r
@@ -942,7 +969,7 @@ as_date(now())
 ```
 
 ```
-## [1] "2023-11-02"
+## [1] "2024-04-10"
 ```
 
 ---
@@ -1041,8 +1068,8 @@ month(datetime, label = TRUE)
 ```
 
 ```
-## [1] Jul
-## 12 Levels: Jan &lt; Feb &lt; Mar &lt; Apr &lt; May &lt; Jun &lt; Jul &lt; Aug &lt; Sep &lt; ... &lt; Dec
+## [1] jul
+## 12 Levels: ene &lt; feb &lt; mar &lt; abr &lt; may &lt; jun &lt; jul &lt; ago &lt; sep &lt; ... &lt; dic
 ```
 
 ```r
@@ -1050,8 +1077,8 @@ wday(datetime, label = TRUE, abbr = FALSE)
 ```
 
 ```
-## [1] Friday
-## 7 Levels: Sunday &lt; Monday &lt; Tuesday &lt; Wednesday &lt; Thursday &lt; ... &lt; Saturday
+## [1] viernes
+## 7 Levels: domingo &lt; lunes &lt; martes &lt; miércoles &lt; jueves &lt; ... &lt; sábado
 ```
 
 ---
@@ -1131,7 +1158,7 @@ mi_edad
 ```
 
 ```
-## Time difference of 11126 days
+## Time difference of 11286 days
 ```
 
 Este objeto alberga tiempos en segundos, minutos, horas, días, etc. Ambiguo
@@ -1147,7 +1174,7 @@ as.duration(mi_edad)
 ```
 
 ```
-## [1] "961286400s (~30.46 years)"
+## [1] "975110400s (~30.9 years)"
 ```
 
 ---
@@ -1238,7 +1265,7 @@ mañana
 ```
 
 ```
-## [1] "2023-11-03"
+## [1] "2024-04-11"
 ```
 
 ```r
@@ -1247,7 +1274,7 @@ año_pasado
 ```
 
 ```
-## [1] "2022-11-01 18:00:00 UTC"
+## [1] "2023-04-10 18:00:00 UTC"
 ```
 
 ---
