--- a/index.html
+++ b/index.html
@@ -1623,7 +1623,7 @@ border-radius: 0px;
 <h1 class="title toc-ignore"><strong>Análisis y Explotación de la
 Información</strong></h1>
 <h3 class="subtitle">CUNEF Universidad</h3>
-<h4 class="date">Página actualizada: 2024-04-10</h4>
+<h4 class="date">Página actualizada: 2024-04-17</h4>
 
 </div>
 
@@ -1729,10 +1729,13 @@ página.</p>
 <ul>
 <li><a href="./labs/lab5.html">Ejercicios</a></li>
 </ul>
+</div>
+<div id="lab-06---strings-factores-y-fechas" class="section level3">
+<h3>Lab 06 - Strings, Factores y Fechas</h3>
+<ul>
+<li><a href="./labs/lab6.html">Ejercicios</a></li>
+</ul>
 <!--
-
-### Lab 06 - Strings, Factores y Fechas
-  - [Ejercicios](./labs/lab6.html)
 
 ### Lab 07 - Modelos
   - [Ejercicios](./labs/lab7.html)
